Fixed tag-input accessibility and overflow issues. (#1472)

--- a/src/themes/website/styles/tags.scss
+++ b/src/themes/website/styles/tags.scss
@@ -30,6 +30,8 @@
 }
 
 .list {
+    overflow-y: auto;
+
     .tag-item {
         cursor: pointer;
     }
